# polygraph-benchmark

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  custom_metrics_demo.py  environment.yml  mkdocs.yml  pixi.toml  polygraph_demo.py  pyproject.toml  pyrightconfig.json  requirements-docs.txt  review-camera-ready.md  setup.py
.github/workflows/: build-and-publish.yaml  docs.yml  mkdocs.yaml  pyright.yaml  ruff.yaml
conversion/: dobson_doig.py  ego.py  flatten_dir.py  guacamol.py  lobster.py  modelnet10.py  moses.py  point_clouds.py  qm9.py  run_all.sh  spectre.py
conversion/rfam/: Snakefile  to_graphs.py
docs/: conf.py  index.md  installation.md
docs/api_reference/: index.md
docs/datasets/: index.md  procedural.md  real_world_topologies.md  small_synthetic.md
docs/metrics/: gaussian_tv_mmd.md  gran.md  molecule_pgd.md  molecule_pgs.md  pgs5.md  rbf_mmd.md  standard_pgs.md  vun.md
docs/tutorials/: basic_usage.md  custom_datasets.md  custom_metrics.md  datasets.md  metrics_overview.md
docs/utils/: descriptors.md  index.md  kernels.md  mmd_utils.md
experiments/: bootstrapping.py  bootstrapping_plot.py  submit_bootstrapping.sh  testing_Meehan_plot.py
experiments/digress-iterations/: main.py
experiments/digress-selection/: evaluate_pgs.py
experiments/meehan_tests/: testing_Meehan.py
experiments/model-quality/: analysis.ipynb  evaluate.py  jobs.sh  jobs_denoising.sh
experiments/model_benchmark/: benchmark.py  benchmark_result_formatting.py  format_benchmark_results.py
experiments/modelnet-motivation/: main.py
experiments/perf_viz/: viz.py
experiments/perturbation/: analysis.ipynb  job_grid.sh  job_grid_cropped.sh  main.py
experiments/phase_plot/: phase_plot.py
experiments/subsampling/: convert_digress_samples_to_nx.py  plot_subsampling.bkp.py  plot_subsampling.py  plot_subsampling_relplot.py  ranking_models.py  submit_subsampling.sh  subsampling.py  subsampling_plot.py
graph_gen_gym/: __init__.py
graph_gen_gym/datasets/: __init__.py  abstract_dataset.py  dataset.py  ego.py  graph.py  graph_storage_dataset.py  lobster.py  molecules.py  planar.py  point_clouds.py  proteins.py  qm9.py  sbm.py  spectre.py  utils.py  zuker_rna.py
graph_gen_gym/metrics/: __init__.py  concrete_frechet_distance.py  concrete_mmd.py  frechet_distance.py  graph_descriptors.py  mmd.py  mmd_two_sample_test.py  vun.py
graph_gen_gym/two_sample_tests/: __init__.py  permutation_mmd.py
graph_gen_gym/utils/: gin.py  graph_descriptors.py  kernels.py  parallel.py  plot.py
logo/: build.sh  build_svgs.sh  logo.tex  logo_full.tex  logo_icon.tex
polygraph/: __init__.py
polygraph/datasets/: __init__.py  ego.py  lobster.py  modelnet.py  molecules.py  planar.py  point_clouds.py  proteins.py  rna.py  sbm.py
polygraph/descriptors/: __init__.py  generic_descriptors.py  interface.py  molecule_descriptors.py
polygraph/metrics/: __init__.py  frechet_distance.py  gaussian_tv_mmd.py  linear_mmd.py  molecule_pgd.py  molecule_pgs.py  polygraphscore.py  rbf_mmd.py  standard_pgd.py  standard_pgs.py  vun.py
polygraph/two_sample_tests/: permutation_mmd.py
polygraph/utils/: graph_descriptors.py  io.py  kernels.py  mmd_utils.py  molclr.py  parallel.py
polygrapher/: __init__.py
polygrapher/datasets/: ego.py  lobster.py  molecules.py  planar.py  point_clouds.py  proteins.py  sbm.py
polygrapher/metrics/: __init__.py
polygrapher/two_sample_tests/: __init__.py  permutation_mmd.py
polygrapher/utils/: gin.py  graph_descriptors.py  kernels.py  mmd_utils.py  sparse_dist.py
reproducibility/: Makefile  README.md  _check_pgd_diffs.py  check_env.py  check_pkl.py  cluster.py  compare_figures.py  compare_pgd_v2_vs_v25.py  compare_tables.py  download_data.py  generate_benchmark_tables.py  generate_concatenation_tables.py  generate_diff_report.py  generate_gklr_tables.py  generate_mmd_tables.py  generate_model_quality_figures.py  generate_perturbation_figures.py  generate_phase_plot.py  generate_subsampling_figures.py  polygraph.mplstyle  recompute_training_pgd.py  recompute_training_pgd_single.py  requirements.txt  rerun_notes.md  slurm_recompute_pgd.sh  slurm_recompute_training.sh  slurm_recompute_v2.sh  submit_all.sh
reproducibility/01_subsampling/: compute.py  compute_mmd.py  compute_pgd.py  plot.py  submit_all.sh
reproducibility/02_perturbation/: compute.py  merge_v2_results.py  plot.py
reproducibility/03_model_quality/: compute.py  compute_vun.py  format.py  plot.py
reproducibility/04_phase_plot/: compute.py  plot.py
reproducibility/05_benchmark/: compute.py  compute_vun.py  format.py  submit_benchmark.sh  submit_vun.sh
reproducibility/06_mmd/: compute.py  format.py
reproducibility/07_concatenation/: compute.py  format.py
reproducibility/08_gklr/: compute.py  format.py  run_single.py  submit_gklr.sh
reproducibility/09_train_test_reference/: compute.py
reproducibility/configs/: 01_subsampling.yaml  01_subsampling_mmd.yaml  01_subsampling_pgd.yaml  02_perturbation.yaml  03_model_quality.yaml  03_model_quality_vun.yaml  04_phase_plot.yaml  05_benchmark.yaml  06_mmd.yaml  07_concatenation.yaml  08_gklr.yaml  09_train_test_reference.yaml  slurm_default.yaml  slurm_gpu.yaml
reproducibility/tables/: benchmark_results.tex  benchmark_results_tabpfn_v6.tex  benchmark_results_tabpfn_weights_v2.5.tex  concatenation.tex  concatenation_tabpfn_v6.tex  correlation-across-training-informedness.tex  correlation-across-training-jsd.tex  denoising_quality.tex  gklr.tex  mmd_gtv.tex  (+10 more)
scripts/: griffe_extension.py
tests/: collect_doc_snippets.py  collect_markdown_snippets.py  conftest.py  test_datasets.py  test_demo.py  test_descriptors.py  test_docstring_snippets.py  test_frechet_distance.py  test_gin_metrics.py  test_graph_storage.py  test_kernels.py  test_metrics.py  test_mmd.py  test_molecule_descriptors.py  test_molecule_metrics.py  test_online_datasets.py  test_polygraphdiscrepancy.py  test_polygraphscore.py  test_procedural_datasets.py  test_snippets.py  test_sparse_dist.py  test_two_sample_test.py  test_two_sample_tests.py  test_vun.py  testing.py
(+2156 files in other folders)
