[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_gen_gym"
version = "0.1"
description = "Graph Generation Gym"
authors = [
    { name = "Markus Krimmel", email = "krimmel@biochem.mpg.de" },
    { name = "Philip Hartout", email = "hartout@biochem.mpg.de" },
    { name = "Dexiong Chen", email = "dchen@biochem.mpg.de" },
    { name = "Karsten Borgwardt", email = "borgwardt@biochem.mpg.de" },
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "torch",
    "torch_geometric",
    "rich",
    "scipy",
    "pydantic",
    "networkx",
    "joblib",
    "appdirs",
    "loguru",
    "python-louvain",
    "rdkit",
    "pandas",
    "orbit-count",
    "numba",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "hydra-core",
    "pyprojroot",
    "ipython",
    "ruff",
    "pre-commit",
    "eden-kernel @ git+https://github.com/fabriziocosta/EDeN.git", # Required for testing equivalence to Thompson et al.
    "ipykernel",
    "grakel",
    "pytest-profiling",
]
gpu = [
    "dgl @ https://data.dgl.ai/wheels/torch-2.4/cu124/dgl-2.4.0%2Bcu124-cp310-cp310-manylinux1_x86_64.whl",
    "nvidia-cuda-runtime-cu12==12.4",
    "nvidia-cuda-nvrtc-cu12==12.4",
    "nvidia-cuda-cupti-cu12==12.4",
]

[tool.setuptools.packages.find]
where = ["."]  # look for packages in the current directory
include = ["graph_gen_gym*"]  # include all packages starting with graph_gen_gym
exclude = ["conversion"]  # keep your existing exclude

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.lint.ruff]
line-length = 80
target-version = "py37"
select = ["D"]
ignore = ["E731"]
exclude = ["tests/ggm_implementation", "tests/gran_mmd_implementation"]

[tool.lint.ruff.pydocstyle]
convention = "google"
